--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "data": "node ./models/Data/data.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
