--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   }
 }
