--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "data": "node ./models/Data/data.js",
-    "test" : "mocha"
+    "test": "mocha"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,6 +18,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "joi": "^17.9.2",
+    "joi-oid": "^1.1.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
